
Mon Nov 10 17:37:08 CET 2008 Paolo Molaro <lupus@ximian.com>

	* configure.in: check for sys/user.h and struct kinfo_proc members.

2008-11-07  Bill Holmes  <billholmes54@gmail.com>

	* winconfig.h : Removing HAVE_DIRENT_H, HAVE_STDINT_H,
	  HAVE_VISIBILITY_HIDDEN, HAVE_ZLIB for the VC builds.

	Code is contributed under MIT/X11 license.

2008-11-05  Bill Holmes  <billholmes54@gmail.com>

	* configure.in : Adding a auto configure check for dirent.h.

	Code is contributed under MIT/X11 license.

2008-10-30  Jonathan Pryor  <jpryor@novell.com>

	* Makefile.am: Build `docs` after `runtime`, so that it can depend
	  upon mdoc.exe for it's operation.

2008-10-30  Jonathan Pryor  <jpryor@novell.com>

	* man/mdoc-assemble.1: Document //node use within .source files.

2008-10-27  Jb Evain  <jbevain@novell.com>

	* data/cecil.pc.in: update version.

2008-10-22  Zoltan Varga  <vargaz@gmail.com>

	* scripts/Makefile.am: Add gacutil1 script.

2008-10-21  Atsushi Enomoto  <atsushi@ximian.com>

	* data/dotnet35.pc.in : added sys.cm.dataannotations.dll too.

2008-10-21  Atsushi Enomoto  <atsushi@ximian.com>

	* data/net_2_0/web.config : added new assemblies and namespaces in
	  pages and compilation sections.

2008-10-21  Atsushi Enomoto  <atsushi@ximian.com>

	* data/dotnet35.pc.in : added new assemblies (dlinq, abstractions,
	  routing, dynamic data).

2008-10-20  Jonathan Pryor  <jpryor@novell.com>

	* scripts/mod.in: Remove bash-isms.

2008-10-18  Jonathan Pryor  <jpryor@novell.com>

	* configure.in: Generate data/monodoc.pc.

2008-10-18  Jonathan Pryor  <jpryor@novell.com>

	* data/Makefile.am: Add monodoc.pc to $(pkgconfig_DATA), $(DISTCLEANFILES).

2008-10-18  Jonathan Pryor  <jpryor@novell.com>

	* data/monodoc.pc.in: Fixup sourcesdir.
	* data/Makefile.am (EXTRA_DIST): Add monodoc.pc.in.

2008-10-17  Jonathan Pryor  <jpryor@novell.com>

	* scripts/Makefile.am: Install scripts for mdoc-compat commands.
	* scripts (svn:ignore): Ignore generated files.