@@ -1,3 +1,7 @@
+2008-12-05  Marek Habersack  <mhabersack@novell.com>
+ 
+	* configure.in: check whether round (3) and rint (3) are present
+	in the C library.
 
 Mon Nov 10 17:37:08 CET 2008 Paolo Molaro <lupus@ximian.com>
 
